--- a/disaster-management-fe/src/app/login/login.component.html
+++ b/disaster-management-fe/src/app/login/login.component.html
@@ -1,1 +1,35 @@
-<p>login works!</p>
+
+<form class="vertical-stackpanel" style="width: calc(min(90%, 600px)); margin: auto" method="post">
+    <h2>Login</h2>
+    <label>
+        Email *
+        <input nz-input name="emailInput" required placeholder="abc@example.com" [(ngModel)]="email" (input)="checkFormValidity()">
+    </label>
+    <label>
+        Password
+        <nz-input-group [nzSuffix]="suffixTemplate">
+            <input
+              [type]="passwordVisible ? 'text' : 'password'"
+              nz-input
+              name="passwordInput"
+              (input)="checkFormValidity()"
+              placeholder="input password"
+              [(ngModel)]="password"
+            />
+          </nz-input-group>
+          <ng-template #suffixTemplate>
+            <span
+              nz-icon
+              [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+              (click)="passwordVisible = !passwordVisible"
+            ></span>
+          </ng-template>
+    </label>
+
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <p>
+            Don't have an account? <a href="register">Register</a>
+        </p>
+        <button nz-button type="submit" nzType="primary" [disabled]="!isFormValid" (click)="loginClick()">Login</button>
+    </div>
+</form>
