--- a/disaster-management-fe/src/app/login/login.component.html
+++ b/disaster-management-fe/src/app/login/login.component.html
@@ -2,8 +2,8 @@
 <form class="vertical-stackpanel" style="width: calc(min(90%, 600px)); margin: auto" method="post">
     <h2>Login</h2>
     <label>
-        Email *
-        <input nz-input name="emailInput" required placeholder="abc@example.com" [(ngModel)]="email" (input)="checkFormValidity()">
+        Phone *
+        <input nz-input name="phoneInput" required placeholder="01818793261" [(ngModel)]="phone" (input)="checkFormValidity()">
     </label>
     <label>
         Password
