--- a/disaster-management-fe/src/app/app.component.html
+++ b/disaster-management-fe/src/app/app.component.html
@@ -20,13 +20,14 @@
     </ul>
     @if (auths.userId < 1) {
       <div class="auth-section">
-        <a style="margin: auto;" href="login">Log in</a> or <a style="margin: auto;" href="register">Sign up</a>
+        <a style="margin: auto;" href="login">Log in</a> or <a style="margin: auto;" href="register">Join as a volunteer</a>
       </div>
     }
     @else {
       <div class="auth-section">
         Logged in as {{auths.name}}. <br> 
         <a href="profile">Profile</a>
+        <a (click)="logout()">Logout</a>
       </div>
     }
   </nz-sider>
