--- a/disaster-management-fe/src/app/volunteer/volunteer.component.html
+++ b/disaster-management-fe/src/app/volunteer/volunteer.component.html
@@ -1,1 +1,19 @@
-<p>volunteer works!</p>
+
+<nz-list nzItemLayout="horizontal" [nzLoading]="isDataLoading">
+    @for (item of data; track item) {
+      <nz-list-item>
+        <nz-list-item-meta >
+            <nz-list-item-meta-description>
+                <section>User id : {{item.id}}</section>
+                <strong>phone : {{item.phone}}</strong><br>
+            </nz-list-item-meta-description>
+            <nz-list-item-meta-title>
+                {{item.name}}
+            </nz-list-item-meta-title>
+        </nz-list-item-meta>
+      </nz-list-item>
+    }
+    @if (data.length === 0) {
+      <nz-list-empty />
+    }
+</nz-list>
