--- a/disaster-management-fe/src/app/home/home.component.html
+++ b/disaster-management-fe/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: column; overflow-y: scroll; max-height: 100vh; gap: 10px;">
   <app-donation class="flex-1" [IsDonateButtonVisible]="false"></app-donation>
-  <app-crisis class="flex-1" [IsNewCrisisButtonVisible]="false"></app-crisis>
+  <app-crisis-edit class="flex-1" [ShowEditOptions]="false" [IsHeaderVisible]="true" [IsNewCrisisButtonVisible]="false"></app-crisis-edit>
   <app-volunteer class="flex-1" [ShowExtraButtons]="false"></app-volunteer>
 </div>
