--- a/disaster-management-fe/src/app/volunteer/volunteer.component.html
+++ b/disaster-management-fe/src/app/volunteer/volunteer.component.html
@@ -17,7 +17,7 @@
         </nz-list-item-meta>
         <ul nz-list-item-actions *ngIf="ShowExtraButtons">
           <nz-list-item-action>
-            <a (click)="viewCrisises(item)">View assigned volunteers</a>
+            <a (click)="viewCrisises(item)">View assigned crisises</a>
           </nz-list-item-action>
       </ul>
       </nz-list-item>
