--- a/disaster-management-fe/src/app/admin/admin.component.html
+++ b/disaster-management-fe/src/app/admin/admin.component.html
@@ -1,68 +1,14 @@
 <ul nz-menu nzMode="horizontal">
-    <li nz-menu-item nzSelected (click)="selectedItem = 'volunteer'">
+    <li nz-menu-item [nzSelected]="selectedItem === 'volunteer'" [routerLink]="['/admin/volunteer']" (click)="selectedItem = 'volunteer'">
         Volunteer
     </li>
-    <li nz-menu-item (click)="selectedItem = 'crisis'">
+    <li nz-menu-item [nzSelected]="selectedItem === 'crisis'" [routerLink]="['/admin/crisis']" (click)="selectedItem = 'crisis'">
         Crisis
     </li>
-    <li nz-menu-item (click)="selectedItem = 'report'">
+    <li nz-menu-item [routerLink]="['/admin/volunteer']">
         Report
     </li>
 </ul>
 
 
-<nz-list *ngIf="selectedItem === 'crisis'" nzItemLayout="horizontal" [nzLoading]="isDataLoading">
-    @for (item of crisisData; track item) {
-      <nz-list-item 
-        [class.resolved-bg]="item.status === 'resolved'" 
-        [class.critical-bg]="item.severity === 'critical' && item.status !== 'resolved'"
-        style="padding-left: 10px;">
-        <nz-list-item-meta >
-            <nz-list-item-meta-description>
-                <section><strong>Incident : </strong>{{item.incident}}</section>
-                <strong>Status : </strong> 
-
-                <!-- only allow editing status for non-resolved incidents -->
-                @if (item.status === 'resolved') {
-                    Resolved
-                }
-                @else {
-                    <nz-select name="statusInput" [(ngModel)]="item.status" nzSize="small" style="margin-left: 12.5px; width: 105px;" (ngModelChange)="crisisStatusChange(item)">
-                        <nz-option nzValue="reported" nzLabel="Reported"></nz-option>
-                        <nz-option nzValue="checking" nzLabel="Checking"></nz-option>
-                        <nz-option nzValue="responding" nzLabel="Responding"></nz-option>
-                        <nz-option nzValue="resolved" nzLabel="Resolved"></nz-option>
-                    </nz-select>
-                }
-                <br>
-                <strong>Severity : </strong>
-                <nz-select name="severityInput" [(ngModel)]="item.severity" nzSize="small" style="width: 105px;" (ngModelChange)="crisisSeverityChange(item)">
-                    <nz-option nzValue="low" nzLabel="Low"></nz-option>
-                    <nz-option nzValue="moderate" nzLabel="Moderate"></nz-option>
-                    <nz-option nzValue="critical" nzLabel="Critical"></nz-option>
-                </nz-select>
-            </nz-list-item-meta-description>
-            <nz-list-item-meta-title>
-                    {{item.location}}
-            </nz-list-item-meta-title>
-        </nz-list-item-meta>
-        <ul nz-list-item-actions *ngIf="item.status !== 'reported'">
-            <nz-list-item-action>
-              <nz-select 
-                style="width: 180px;"
-                nzPlaceHolder="Assign a volunteer"
-                [(ngModel)]="item.user_id"
-                (ngModelChange)="assignVolunteerFor(item, $event)"
-                [nzLoading]="isUsersLoading">
-                @for (usr of users; track users) {
-                    <nz-option [nzValue]="usr.id" [nzLabel]="usr.name"></nz-option>
-                }
-              </nz-select>
-            </nz-list-item-action>
-        </ul>
-      </nz-list-item>
-    }
-    @if (crisisData.length === 0) {
-      <nz-list-empty />
-    }
-</nz-list>
+<router-outlet></router-outlet>
